Fixed bug causing the PositionList to incorrectly re-sort. Adjusted Vote section and Ballot section spacing for Cordova.

--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -10,7 +10,7 @@ $iphone-x-padding-right: env(safe-area-inset-right);
 $header-height: 48px;
 $header-height-back-to-ballot: 96px;
 $header-height-back-to-ballot-cordova: 71px;
-$header-height-voter-guide-creator: 110px;  // Was 105px
+$header-height-voter-guide-creator: 108px;
 
 .page-header {
   // required overrides for Bootstrap :(
